Improved the look of dark mode

--- a/src/main/resources/themes/DarkPolisLaf.properties
+++ b/src/main/resources/themes/DarkPolisLaf.properties
@@ -1,6 +1,12 @@
-@background = #111318
+@background = #3c3c3c
 
 ScrollPane.border =
+
+[style]TextField.uriTextField = arc: 999; background: #282828; borderColor: #282828; focusedBackground: #3c3c3c; focusColor: #a8c7fa; focusWidth: 1; placeholderForeground: #e3e3e3;
+
+addressBarBorderColor = #444746
+addressBarEnabledButtonColor = #c7c7c7
+addressBarDisabledButtonColor = #6b6b6b
 
 primary = #AAC7FF
 secondaryContainer = #3E4759
