--- a/src/main/resources/themes/LightPolisLaf.properties
+++ b/src/main/resources/themes/LightPolisLaf.properties
@@ -2,6 +2,12 @@
 
 ScrollPane.border =
 
+[style]TextField.uriTextField = arc: 999; background: #EDF2FA; borderColor: #EDF2FA; focusedBackground: #FFFFFF; focusColor: #0B57D0; focusWidth: 1; placeholderForeground: #101010;
+
+addressBarBorderColor = #C0C0C0
+addressBarEnabledButtonColor = #474747
+addressBarDisabledButtonColor = #c0c0c0
+
 primary = #415F91
 secondaryContainer = #DAE2F9
 surface = #F9F9FF
