--- a/src/main/resources/themes/DarkPolisLaf.properties
+++ b/src/main/resources/themes/DarkPolisLaf.properties
@@ -2,12 +2,17 @@
 
 ScrollPane.border =
 
-[style]TextField.uriTextField = arc: 999; background: #282828; borderColor: #282828; focusedBackground: #3c3c3c; focusColor: #a8c7fa; focusWidth: 1; placeholderForeground: #e3e3e3;
-
 addressBarBorderColor = #444746
 addressBarEnabledButtonColor = #c7c7c7
 addressBarDisabledButtonColor = #6b6b6b
 
+[style]TextField.uriTextField = arc: 999; background: #282828; borderColor: #282828; focusedBackground: #3c3c3c; focusColor: #a8c7fa; focusWidth: 1; placeholderForeground: #e3e3e3;
+
 primary = #AAC7FF
 secondaryContainer = #3E4759
 surface = #111318
+
+linkPreviewBackground = #282828
+linkPreviewBorder = #cccccc
+linkColor = $primary
+linkHoveredColor = #4F4FFF
