--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
     mavenCentral()
 }
 
+run {
+    systemProperties System.properties
+}
+
 application {
     mainClass = theMainClass
 }
